# frdm-kl25z

./: CMakeLists.txt
cmake/: build_type.cmake  colors.cmake  programmer.cmake  targets.cmake  toolchain.cmake
dslogic/: dslogic_session_debug_io.dsc
jlink/: frdm-kl25z.jflash  program_command_file.jlink
nxp_sdk/: CMakeLists.txt
nxp_sdk/CMSIS/Core/: CMakeLists.txt
nxp_sdk/Device/MKL25Z4/: CMakeLists.txt  system_MKL25Z4.c
nxp_sdk/Device/MKL25Z4/drivers/: CMakeLists.txt  fsl_clock.h  fsl_spi_freertos.c  fsl_spi_freertos.h
nxp_sdk/Device/MKL25Z4/gcc/: MKL25Z128xxx4_flash.ld  MKL25Z128xxx4_ram.ld  startup_MKL25Z4.S
scripts/: setup_environment.sh
targets/hw_layer/: CMakeLists.txt
targets/hw_layer/hw_api/: CMakeLists.txt
targets/hw_layer/hw_api/clock_config/: clock_config.c
targets/hw_layer/hw_api/include/: clock_config.h
targets/support/: CMakeLists.txt
targets/support/debug/: debug_io.c
targets/support/include/: debug_io.h  led.h
targets/support/led/: led.c
targets/target_1/: CMakeLists.txt  target_1.c
